test/spec_vectors/func_ptrs/fail/module_6.wat
(module (func (type 42)))